--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fantasy Game Corp</title>
+    <!--BOOTSTRAP - CSS-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <div class="container-grid">
-            <a href=""><img src="img/Fantasy_Logo_Branco-com-Sombra 1.png" alt="Logo do Site"></a>
-            <nav class="menu">
+        <div class="container-grid posicionamento-header">
+            <a href=""><img class="logo" src="img/Fantasy_Logo_Branco-com-Sombra 1.png" alt="Logo do Site"></a>
+            
+            <nav id="menu" class="menu">
                 <a href="">Home</a>
                 <a href="">Jogos</a>
                 <a href="">Notícias</a>
@@ -20,6 +23,7 @@
                 <a href="">Minha Conta</a>
                 <a href=""><img src="img/lupa.png" alt="Pesquisa"></a>
             </nav>
+            <a href="" onclick="mostrarMenu()"><img class="barras" src="img/menu_icon.svg" alt="Menu de Barras"></a>
         </div>
     </header>
     <div class="banner">
@@ -31,5 +35,54 @@
         </div>
     </div>
     </div>
+    <section class="secao-sobre">
+        <div class="conteudo-sobre container">
+            <div class="row">
+                <div class="texto-sobre col-md-9">
+                    <h2 class="atualizacoes">Últimas atualizações</h2>
+                    <p class="noticia"><a href="">15/12/2021 - WoW - Acompanhe o desenvolvimento da nova classe!</a></p>
+                    <p class="noticia"><a href="">14/12/2021 - KalOnline - Nova area e nova raid em DeVah!</a></p>
+                    <p class="noticia"><a href="">10/12/2021 - GW2 - Novas montarias a caminho!</a></p>
+                    <p class="noticia"><a href="">10/12/2021 - Tetris - Quadradinhos e mais quadradinhos</a></p>
+                    <p class="noticia"><a href="">10/12/2021 - DDO - Vencedor da screenshot da semana</a></p>
+                    <p class="noticia"><a href="">09/12/2021 - Presença da Fantasy no E3!</a></p>
+                    <p class="noticia"><a href="">09/12/2021 - Planejamento de lançamentos para o próximo trimestre</a></p>
+                </div>
+                <div class="container-imagem col-md-3">
+                    <a href=""><img src="img/promo/Promo.png" alt="Imagem da promoção"></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <br>
+
+    <section class="secao-galeria container">
+        <div class="galeria">
+            <a href=""><img src="img/galeria/040915screenshotwk217.jpg"></a>
+            <a href=""><img src="img/galeria/062220screenshotwk469.jpg"></a>
+            <a href=""><img src="img/galeria/111620screenshotwk489.jpg"></a>
+        </div>
+    </section>
+
+    <section class="footer">
+
+    </section>
+
+    <script>
+        let menu = document.getElementById("menu")
+
+        function mostrarMenu(){
+            if(menu.style.display != "flex"){
+                menu.style.display = "flex"
+            }else{
+                menu.style.display = "none"
+            }
+        }
+    </script>
+
+    <!--BOOTSTRAP - JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </body>
 </html>
