--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body onload="mostrarPopup()">
     <header>
         <div class="container-grid posicionamento-header">
             <a href=""><img class="logo" src="img/Fantasy_Logo_Branco-com-Sombra 1.png" alt="Logo do Site"></a>
@@ -48,7 +48,7 @@
                     <p class="noticia"><a href="">09/12/2021 - Presença da Fantasy no E3!</a></p>
                     <p class="noticia"><a href="">09/12/2021 - Planejamento de lançamentos para o próximo trimestre</a></p>
                 </div>
-                <div class="container-imagem col-md-3">
+                <div class="imgpromo col-md-3">
                     <a href=""><img src="img/promo/Promo.png" alt="Imagem da promoção"></a>
                 </div>
             </div>
@@ -58,15 +58,82 @@
     <br>
 
     <section class="secao-galeria container">
-        <div class="galeria">
-            <a href=""><img src="img/galeria/040915screenshotwk217.jpg"></a>
-            <a href=""><img src="img/galeria/062220screenshotwk469.jpg"></a>
-            <a href=""><img src="img/galeria/111620screenshotwk489.jpg"></a>
+        <div class="row">
+            <div class="concurso">
+                Concurso Screenshot da semana
+            </div>
+            <div class="galeria">
+                <a href=""><img src="img/galeria/040915screenshotwk217.jpg"></a>
+                <a href=""><img src="img/galeria/062220screenshotwk469.jpg"></a>
+                <a href=""><img src="img/galeria/111620screenshotwk489.jpg"></a>
+            </div>
         </div>
     </section>
 
-    <section class="footer">
+    <footer class="secao-footer container">
+        <div class="row">
+            <div class="footer-texto col-md-3">
+                <p><b>Fantasy Games Corp</b></p>
+                <ul cass="footerLink">
+                    <li><p class="footerLink"><a href="">Empresa</a></p></li>
+                    <li><p class="footerLink"><a href="">Missão, Visão e Valores</a></p></li>
+                    <li><p class="footerLink"><a href="">Fantasy no Mundo</a></p></li>
+                    <li><p class="footerLink"><a href="">Nossos Parceiros</a></p></li>
+                    <li><p class="footerLink"><a href="">Trabalhe conosco</a></p></li>
+                </ul>
+            </div>
+            <div class="footer-texto col-md-3">
+                <p><b>Jogos</b></p>
+                <ul cass="footerLink">
+                    <li><p class="footerLink"><a href="">D&D.com</a></p></li>
+                    <li><p class="footerLink"><a href="">World of Warcraft</a></p></li>
+                    <li><p class="footerLink"><a href="">Guild Wars 2</a></p></li>
+                    <li><p class="footerLink"><a href="">Kal Online</a></p></li>
+                    <li><p class="footerLink"><a href="">Tetris!</a></p></li>
+                </ul>
+            </div>
+            <div class="footer-texto col-md-3">
+                <p><b>Midia</b></p>
+                <ul cass="footerLink">
+                    <li><p class="footerLink"><a href="">Wallpapers</a></p></li>
+                    <li><p class="footerLink"><a href="">Videos</a></p></li>
+                    <li><p class="footerLink"><a href="">Eventos</a></p></li>
+                    <li><p class="footerLink"><a href="">Imprensa</a></p></li>
+                </ul>
+                <p><b>Newsletter<br></b></p>
+                <form class="newsletter" action="">
+                    <input id="campo-email" type="email" placeholder="E-mail" required>
+                    <button onclick="enviarNewsletter()">Cadastrar</button>
+                </form>
+            </div>
+            <div class="footer-social col-md-3">
+                <a href=""><img class="fbBox" src="img/social_media/facebook_box.png"></a>
+                <a href=""><img class="socialIcon" src="img/social_media/instagram.png"></a>
+                <a href=""><img class="socialIcon" src="img/social_media/twitter.png"></a>
+                <a href=""><img class="socialIcon" src="img/social_media/youtube.png"></a>
+                <a href=""><img class="socialIcon" src="img/social_media/feed.png"></a>
+            </div>
+        </div>
+    </footer>
 
+    <section class="legal container">
+        <div class="legalLinks">
+            <div>
+                <a href="">Política de Privacidade &nbsp;</a>
+            </div>
+            <div>
+                |
+            </div>
+            <div>
+                <a href="">&nbsp; Avisos Legais &nbsp;</a>
+            </div>
+            <div>
+                |
+            </div>
+            <div>
+                <a href="">&nbsp; Política de Cookies</a>
+            </div>
+        </div>
     </section>
 
     <script>
@@ -80,6 +147,11 @@
             }
         }
     </script>
+
+
+    <!-- Nosso arquivo JavaScript -->
+    <script src="js/script.js"></script>
+
 
     <!--BOOTSTRAP - JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
