Adicionada página de login

--- a/login.html
+++ b/login.html
@@ -38,65 +38,34 @@
         <img src="img/banners/Banner_02.png" alt="Afranio responde">
     </div>
 
-    <!-- <div class="banner">
-        <div class="container-grid posicao-texto">
-            <div class="texto-banner">
-                <h1></h1>
-                <p></p>
-                <a href=""></a>
-            </div>
-    </div> -->
+
     </div>
-    <section class="secao-sobre">
-        <div class="conteudo-sobre container">
-            <div class="row">
-                <div class="texto-sobre col-md-9">
-                    <h2 class="atualizacoes">Últimas atualizações</h2>
-                    <div id="espaco-noticias" class="content-news">
-                        <!-- <div class="cardnews">
-                            <p class="noticias"><a href="">15/12/2021 - WoW - Acompanhe o desenvolvimento da nova classe!</a></p>
-                        </div>
-                        <div class="cardnews">
-                            <p class="noticias"><a href="">14/12/2021 - KalOnline - Nova area e nova raid em DeVah!</a></p>
-                        </div>
-                        <div class="cardnews">
-                            <p class="noticias"><a href="">10/12/2021 - GW2 - Novas montarias a caminho!</a></p>
-                        </div>
-                        <div class="cardnews">
-                            <p class="noticias"><a href="">10/12/2021 - Tetris - Quadradinhos e mais quadradinhos</a></p>
-                        </div>
-                        <div class="cardnews">
-                            <p class="noticias"><a href="">10/12/2021 - DDO - Vencedor da screenshot da semana</a></p>
-                        </div>
-                        <div class="cardnews">
-                            <p class="noticias"><a href="">09/12/2021 - Presença da Fantasy no E3!</a></p>
-                        </div>
-                        <div class="cardnews">
-                            <p class="noticias"><a href="">09/12/2021 - Planejamento de lançamentos para o próximo trimestre</a></p>
-                        </div> -->
-                    </div>    
+    <section id="log" class="log">
+        <div class="conteudo-log container">
+            <!-- <div class="row"> -->
+                <div class="login col-md-6">
+                    <h4>Login</h4>
+                        <form class="form-login" action="">
+                            <input id="log-email" type="email" placeholder="E-mail" required>
+                            <input id="log-senha" type="text" placeholder="Senha" required>
+                            <br>
+                            <button class="log-button">Entrar</button>
+                        </form>
                 </div>
-                <div class="imgpromo col-md-3">
-                    <a href=""><img src="img/promo/Promo.png" alt="Imagem da promoção"></a>
+                <div class="login col-md-6">
+                    <h4>Ainda não tem conta? Cadastre-se aqui!</h4>
+                        <form class="form-login" action="">
+                            <input id="log-email" type="E-mail" placeholder="E-mail" required>
+                            <input id="log-senha" type="text" placeholder="Senha" required>
+                            <br>
+                            <button class="log-cadastro-button">Criar conta</button>
+                        </form>
                 </div>
-            </div>
+            <!-- </div> -->
         </div>
     </section>
 
     <br>
-
-    <section class="secao-galeria container">
-        <div class="row">
-            <div class="concurso">
-                Concurso Screenshot da semana
-            </div>
-            <div class="galeria">
-                <a href=""><img src="img/galeria/040915screenshotwk217.jpg"></a>
-                <a href=""><img src="img/galeria/062220screenshotwk469.jpg"></a>
-                <a href=""><img src="img/galeria/111620screenshotwk489.jpg"></a>
-            </div>
-        </div>
-    </section>
 
     <footer class="secao-footer container">
         <div class="row">
@@ -163,19 +132,6 @@
             </div>
         </div>
     </section>
-
-    <!-- <script>
-        let menu = document.getElementById("menu")
-
-        function mostrarMenu(){
-            if(menu.style.display != "flex"){
-                menu.style.display = "flex"
-            }else{
-                menu.style.display = "none"
-            }
-        }
-
-    </script> -->
 
 
     <!-- Entrada JQuery -->
