--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
             <a href=""><img class="logo" src="img/Fantasy_Logo_Branco-com-Sombra 1.png" alt="Logo do Site"></a>
             
             <nav id="menu" class="menu">
-                <a href="">Home</a>
+                <a href="index.html">Home</a>
                 <a href="">Jogos</a>
                 <a href="">Notícias</a>
                 <a href="">Loja</a>
                 <a href="">Suporte</a>
-                <a href="">Minha Conta</a>
+                <a href="login.html">Minha Conta</a>
                 <a href=""><img src="img/lupa.png" alt="Pesquisa" onclick="mostraBusca()"></a>
                 <div id="busca">
                     <form class="busca" action="">
@@ -91,9 +91,15 @@
                 Concurso Screenshot da semana
             </div>
             <div class="galeria">
-                <a href=""><img src="img/galeria/040915screenshotwk217.jpg"></a>
-                <a href=""><img src="img/galeria/062220screenshotwk469.jpg"></a>
-                <a href=""><img src="img/galeria/111620screenshotwk489.jpg"></a>
+                <div class="galeria1">
+                    <a href=""><img src="img/galeria/040915screenshotwk217.jpg"></a>
+                </div>
+                <div class="galeria2">
+                    <a href=""><img src="img/galeria/062220screenshotwk469.jpg"></a>
+                </div>
+                <div class="galeria3">
+                    <a href=""><img src="img/galeria/111620screenshotwk489.jpg"></a>
+                </div>
             </div>
         </div>
     </section>
@@ -110,7 +116,7 @@
                     <li><p class="footerLink"><a href="">Trabalhe conosco</a></p></li>
                 </ul>
             </div>
-            <div class="footer-texto col-md-3">
+            <div class="footer-texto2 col-md-3">
                 <p><b>Jogos</b></p>
                 <ul cass="footerLink">
                     <li><p class="footerLink"><a href="">D&D.com</a></p></li>
@@ -120,7 +126,7 @@
                     <li><p class="footerLink"><a href="">Tetris!</a></p></li>
                 </ul>
             </div>
-            <div class="footer-texto col-md-3">
+            <div class="footer-texto3 col-md-3">
                 <p><b>Midia</b></p>
                 <ul cass="footerLink">
                     <li><p class="footerLink"><a href="">Wallpapers</a></p></li>
@@ -135,10 +141,10 @@
                 </form>
             </div>
             <div class="footer-social col-md-3">
-                <a href=""><img class="fbBox" src="img/social_media/facebook_box.png"></a>
-                <a href=""><img class="socialIcon" src="img/social_media/instagram.png"></a>
-                <a href=""><img class="socialIcon" src="img/social_media/twitter.png"></a>
-                <a href=""><img class="socialIcon" src="img/social_media/youtube.png"></a>
+                <a href="http://www.facebook.com"><img class="fbBox" src="img/social_media/facebook_box.png"></a>
+                <a href="http://www.instagram.com"><img class="socialIcon" src="img/social_media/instagram.png"></a>
+                <a href="http://www.twitter.com"><img class="socialIcon" src="img/social_media/twitter.png"></a>
+                <a href="http://www.youtube.com"><img class="socialIcon" src="img/social_media/youtube.png"></a>
                 <a href=""><img class="socialIcon" src="img/social_media/feed.png"></a>
             </div>
         </div>
