--- a/login.html
+++ b/login.html
@@ -9,18 +9,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body onload="renderizarNoticias()">
+<body>
     <header>
         <div class="container-grid posicionamento-header">
             <a href=""><img class="logo" src="img/Fantasy_Logo_Branco-com-Sombra 1.png" alt="Logo do Site"></a>
             
             <nav id="menu" class="menu">
-                <a href="">Home</a>
+                <a href="index.html">Home</a>
                 <a href="">Jogos</a>
                 <a href="">Notícias</a>
                 <a href="">Loja</a>
                 <a href="">Suporte</a>
-                <a href="">Minha Conta</a>
+                <a href="login.html">Minha Conta</a>
                 <a href=""><img src="img/lupa.png" alt="Pesquisa" onclick="mostraBusca()"></a>
                 <div id="busca">
                     <form class="busca" action="">
@@ -33,10 +33,10 @@
         </div>
     </header>
 
-    <div id="carrossel" class="carrossel">
+    <!-- <div id="carrossel" class="carrossel">
         <img src="img/banners/Banner_01.png" alt="DDO Feywild">
         <img src="img/banners/Banner_02.png" alt="Afranio responde">
-    </div>
+    </div> -->
 
 
     </div>
@@ -49,16 +49,16 @@
                             <input id="log-email" type="email" placeholder="E-mail" required>
                             <input id="log-senha" type="text" placeholder="Senha" required>
                             <br>
-                            <button class="log-button">Entrar</button>
+                            <button class="log-button" onclick="enviarLogin()">Entrar</button>
                         </form>
                 </div>
                 <div class="login col-md-6">
                     <h4>Ainda não tem conta? Cadastre-se aqui!</h4>
-                        <form class="form-login" action="">
-                            <input id="log-email" type="E-mail" placeholder="E-mail" required>
-                            <input id="log-senha" type="text" placeholder="Senha" required>
+                        <form class="form-cadastrar" action="">
+                            <input id="cad-email" type="E-mail" placeholder="E-mail" required>
+                            <input id="cad-senha" type="text" placeholder="Senha" required>
                             <br>
-                            <button class="log-cadastro-button">Criar conta</button>
+                            <button class="log-cadastro-button" onclick="enviarCadastrar()">Criar conta</button>
                         </form>
                 </div>
             <!-- </div> -->
@@ -79,7 +79,7 @@
                     <li><p class="footerLink"><a href="">Trabalhe conosco</a></p></li>
                 </ul>
             </div>
-            <div class="footer-texto col-md-3">
+            <div class="footer-texto2 col-md-3">
                 <p><b>Jogos</b></p>
                 <ul cass="footerLink">
                     <li><p class="footerLink"><a href="">D&D.com</a></p></li>
@@ -89,7 +89,7 @@
                     <li><p class="footerLink"><a href="">Tetris!</a></p></li>
                 </ul>
             </div>
-            <div class="footer-texto col-md-3">
+            <div class="footer-texto3 col-md-3">
                 <p><b>Midia</b></p>
                 <ul cass="footerLink">
                     <li><p class="footerLink"><a href="">Wallpapers</a></p></li>
@@ -104,10 +104,10 @@
                 </form>
             </div>
             <div class="footer-social col-md-3">
-                <a href=""><img class="fbBox" src="img/social_media/facebook_box.png"></a>
-                <a href=""><img class="socialIcon" src="img/social_media/instagram.png"></a>
-                <a href=""><img class="socialIcon" src="img/social_media/twitter.png"></a>
-                <a href=""><img class="socialIcon" src="img/social_media/youtube.png"></a>
+                <a href="http://www.facebook.com"><img class="fbBox" src="img/social_media/facebook_box.png"></a>
+                <a href="http://www.instagram.com"><img class="socialIcon" src="img/social_media/instagram.png"></a>
+                <a href="http://www.twitter.com"><img class="socialIcon" src="img/social_media/twitter.png"></a>
+                <a href="http://www.youtube.com"><img class="socialIcon" src="img/social_media/youtube.png"></a>
                 <a href=""><img class="socialIcon" src="img/social_media/feed.png"></a>
             </div>
         </div>
