--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body onload="renderizarNoticias()">
     <header>
         <div class="container-grid posicionamento-header">
-            <a href=""><img class="logo" src="img/Fantasy_Logo_Branco-com-Sombra 1.png" alt="Logo do Site"></a>
+            <a href="index.html"><img class="logo" src="img/Fantasy_Logo_Branco-com-Sombra 1.png" alt="Logo do Site"></a>
             
             <nav id="menu" class="menu">
                 <a href="index.html">Home</a>
@@ -22,12 +22,12 @@
                 <a href="">Suporte</a>
                 <a href="login.html">Minha Conta</a>
                 <a href=""><img src="img/lupa.png" alt="Pesquisa" onclick="mostraBusca()"></a>
-                <div id="busca">
+                <!-- <div id="busca">
                     <form class="busca" action="">
                         <input id="busca-entrada" type="text" placeholder="O que você está procurando?">
                         <button onclick="busca()">Procurar</button>
                     </form>
-                </div>
+                </div> -->
             </nav>
             <a href="#" id="barras"><img class="barras" src="img/menu_icon.svg" alt="Menu de Barras"></a>
         </div>
@@ -115,6 +115,12 @@
                     <li><p class="footerLink"><a href="">Nossos Parceiros</a></p></li>
                     <li><p class="footerLink"><a href="">Trabalhe conosco</a></p></li>
                 </ul>
+                <p><b>Newsletter<br></b></p>
+                <form class="newsletter" action="">
+                    <input id="campo-email" type="email" placeholder="E-mail" required>
+                    <button onclick="enviarNewsletter()">Cadastrar</button><br>
+                    <p></p>
+                </form>
             </div>
             <div class="footer-texto2 col-md-3">
                 <p><b>Jogos</b></p>
@@ -129,19 +135,20 @@
             <div class="footer-texto3 col-md-3">
                 <p><b>Midia</b></p>
                 <ul cass="footerLink">
+                    <li><p class="footerLink"><a href="">Tutoriais</a></p></li>
                     <li><p class="footerLink"><a href="">Wallpapers</a></p></li>
                     <li><p class="footerLink"><a href="">Videos</a></p></li>
                     <li><p class="footerLink"><a href="">Eventos</a></p></li>
                     <li><p class="footerLink"><a href="">Imprensa</a></p></li>
                 </ul>
-                <p><b>Newsletter<br></b></p>
+                <!-- <p><b>Newsletter<br></b></p>
                 <form class="newsletter" action="">
                     <input id="campo-email" type="email" placeholder="E-mail" required>
                     <button onclick="enviarNewsletter()">Cadastrar</button>
-                </form>
+                </form> -->
             </div>
             <div class="footer-social col-md-3">
-                <a href="http://www.facebook.com"><img class="fbBox" src="img/social_media/facebook_box.png"></a>
+                <a href="http://www.facebook.com"><img class="fbBox" src="img/social_media/facebook_box.png"></a><br>
                 <a href="http://www.instagram.com"><img class="socialIcon" src="img/social_media/instagram.png"></a>
                 <a href="http://www.twitter.com"><img class="socialIcon" src="img/social_media/twitter.png"></a>
                 <a href="http://www.youtube.com"><img class="socialIcon" src="img/social_media/youtube.png"></a>
